snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1-sources.jar.sha1
42a39b57169dc4ce068b8e37ae8dc58c06e3bf0a